Update "author" in setup file
As required by BBP open sourcing checklist 1.C

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,8 +3,7 @@ name = morphoclass
 description = Package for classifying neuron morphologies
 long_description = file: README.md
 long_description_content_type = text/markdown
-author = Stanislav Schmidt
-author_email = stanislav.schmidt@epfl.ch
+author = Blue Brain Project, EPFL
 maintainer = bbp-ou-machinelearning
 maintainer_email = bbp-ou-machinelearning@groupes.epfl.ch
 license = BBP-internal-confidential
