--- a/dvc/params.yaml
+++ b/dvc/params.yaml
@@ -39,6 +39,34 @@ explain_models:
     checkpoint_path_outs: reports/xai/pyramidal_cells/L2/pc_tmd_L2_stratifKFold_xgb_oversampled/
     id: pc_tmd_L2_stratifKFold_xgb_oversampled
     results_file: reports/xai/pyramidal_cells/L2/pc_tmd_L2_stratifKFold_xgb_oversampled/xai_report.html
+models-and-features:
+  cnn-deepwalk:
+    model: cnn
+    features: image-deepwalk
+  cnn-tmd:
+    model: cnn
+    features: image-tmd-rd
+  decision-tree-deepwalk:
+    model: decision-trees
+    features: image-deepwalk
+  decision-tree-tmd:
+    model: decision-trees
+    features: image-tmd-rd
+  gnn-morphology:
+    model: gnn
+    features: graph-rd
+  perslay-deepwalk:
+    model: perslay
+    features: diagram-deepwalk
+  perslay-tmd:
+    model: perslay
+    features: diagram-tmd-rd
+  xgb-deepwalk:
+    model: xgb
+    features: image-deepwalk
+  xgb-tmd:
+    model: xgb
+    features: image-tmd-rd
 feature_extractors:
   in_deepwalk:
     dataset_name: interneurons
