Repro the remaining "train-*" stages

--- a/dvc/training/checkpoints-lida/.gitignore
+++ b/dvc/training/checkpoints-lida/.gitignore
@@ -34,3 +34,39 @@
 /janelia-L5-perslay-deepwalk-stratifKFold
 /janelia-L5-cnn-tmd-stratifKFold
 /janelia-L5-xgb-deepwalk-stratifKFold
+/in-merged-bc-merged-decision-tree-deepwalk-stratified-k-fold
+/in-merged-perslay-deepwalk-stratified-k-fold
+/in-merged-bc-merged-perslay-tmd-stratified-k-fold
+/janelia-L5-perslay-tmd-stratified-k-fold
+/in-merged-bc-merged-xgb-tmd-stratified-k-fold
+/in-merged-bc-merged-perslay-deepwalk-stratified-k-fold
+/in-merged-bc-merged-cnn-deepwalk-stratified-k-fold
+/in-merged-no-nbc-decision-tree-deepwalk-stratified-k-fold
+/janelia-L5-perslay-deepwalk-stratified-k-fold
+/janelia-L5-gnn-morphology-stratified-k-fold
+/janelia-L5-cnn-tmd-stratified-k-fold
+/in-merged-no-nbc-perslay-tmd-stratified-k-fold
+/in-merged-no-nbc-xgb-tmd-stratified-k-fold
+/in-merged-decision-tree-deepwalk-stratified-k-fold
+/in-merged-bc-merged-cnn-tmd-stratified-k-fold
+/janelia-L5-xgb-tmd-stratified-k-fold
+/in-merged-xgb-tmd-stratified-k-fold
+/in-merged-cnn-deepwalk-stratified-k-fold
+/in-merged-bc-merged-xgb-deepwalk-stratified-k-fold
+/in-merged-bc-merged-decision-tree-tmd-stratified-k-fold
+/janelia-L5-xgb-deepwalk-stratified-k-fold
+/in-merged-gnn-morphology-stratified-k-fold
+/janelia-L5-decision-tree-deepwalk-stratified-k-fold
+/in-merged-decision-tree-tmd-stratified-k-fold
+/in-merged-cnn-tmd-stratified-k-fold
+/in-merged-xgb-deepwalk-stratified-k-fold
+/in-merged-bc-merged-gnn-morphology-stratified-k-fold
+/in-merged-no-nbc-perslay-deepwalk-stratified-k-fold
+/in-merged-no-nbc-decision-tree-tmd-stratified-k-fold
+/janelia-L5-decision-tree-tmd-stratified-k-fold
+/in-merged-perslay-tmd-stratified-k-fold
+/in-merged-no-nbc-cnn-tmd-stratified-k-fold
+/in-merged-no-nbc-xgb-deepwalk-stratified-k-fold
+/janelia-L5-cnn-deepwalk-stratified-k-fold
+/in-merged-no-nbc-gnn-morphology-stratified-k-fold
+/in-merged-no-nbc-cnn-deepwalk-stratified-k-fold
