--- a/dvc/training/checkpoints-pc-merged-classes/.gitignore
+++ b/dvc/training/checkpoints-pc-merged-classes/.gitignore
@@ -25,3 +25,30 @@
 /pc-L6-decisiontree-tmd-stratifKFold
 /pc-L6-cnn-deepwalk-stratifKFold
 /pc-L6-cnn-tmd-stratifKFold
+/pc-L5-perslay-deepwalk-stratified-k-fold
+/pc-L2-decision-tree-deepwalk-stratified-k-fold
+/pc-L6-xgb-tmd-stratified-k-fold
+/pc-L5-cnn-tmd-stratified-k-fold
+/pc-L6-gnn-morphology-stratified-k-fold
+/pc-L2-decision-tree-tmd-stratified-k-fold
+/pc-L6-perslay-deepwalk-stratified-k-fold
+/pc-L2-cnn-tmd-stratified-k-fold
+/pc-L6-cnn-deepwalk-stratified-k-fold
+/pc-L6-xgb-deepwalk-stratified-k-fold
+/pc-L5-cnn-deepwalk-stratified-k-fold
+/pc-L2-xgb-tmd-stratified-k-fold
+/pc-L2-xgb-deepwalk-stratified-k-fold
+/pc-L5-xgb-tmd-stratified-k-fold
+/pc-L6-decision-tree-tmd-stratified-k-fold
+/pc-L5-decision-tree-deepwalk-stratified-k-fold
+/pc-L5-gnn-morphology-stratified-k-fold
+/pc-L2-perslay-tmd-stratified-k-fold
+/pc-L5-xgb-deepwalk-stratified-k-fold
+/pc-L5-perslay-tmd-stratified-k-fold
+/pc-L5-decision-tree-tmd-stratified-k-fold
+/pc-L2-perslay-deepwalk-stratified-k-fold
+/pc-L6-decision-tree-deepwalk-stratified-k-fold
+/pc-L2-gnn-morphology-stratified-k-fold
+/pc-L2-cnn-deepwalk-stratified-k-fold
+/pc-L6-perslay-tmd-stratified-k-fold
+/pc-L6-cnn-tmd-stratified-k-fold
