Add [rtd] extra_requires for torch-*** dependencies

--- a/setup.cfg
+++ b/setup.cfg
@@ -67,6 +67,12 @@ docs =
     sphinx
     sphinx-bluebrain-theme
     sphinx-rtd-theme
+rtd =
+    torch-cluster==1.6.0
+    torch-geometric==1.7.2
+    torch-scatter==2.0.9
+    torch-sparse==0.6.13
+    torch-spline-conv==1.2.1
 dev =
     dvc[ssh]>=2
     pre-commit
