--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -12,9 +12,7 @@ build:
 python:
   version: "3.8"
   install:
+    - requirements: docs/requirements.txt
     - method: pip
       path: .
-      extra_requirements:
-        - docs
-        - rtd
   system_packages: true
