--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ morphio==3.3.3
 morphology-workflows==0.2.0
 networkx==2.5
 neurom==3.1.0
+neurots==3.1.1
 numpy==1.20.3
 pandas==1.3.4
 plotly==5.4.0
