--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -15,6 +15,10 @@ jobs:
       matrix:
         tox-env: [lint, type, apidoc-check]
     steps:
+      - name: Cancel Previous Runs
+        uses: styfle/cancel-workflow-action@0.9.1
+        with:
+          access_token: ${{ github.token }}
       - name: Checkout latest commit
         uses: actions/checkout@v2
         with:
@@ -44,6 +48,10 @@ jobs:
         os: [ubuntu-latest, macos-latest]
         python-version: [3.8]
     steps:
+      - name: Cancel Previous Runs
+        uses: styfle/cancel-workflow-action@0.9.1
+        with:
+          access_token: ${{ github.token }}
       - name: Checkout latest commit
         uses: actions/checkout@v2
         with:
