--- a/dvc/params.yaml
+++ b/dvc/params.yaml
@@ -1364,3 +1364,53 @@ transfer_learning:
       results_file: reports/transfer_learning/interneurons/L6/transfer_learning_report.html
   shared_parameters:
     seed: 113587
+
+training-morphometrics:
+  in-L1-morphometrics-xgb-stratified-k-fold:
+    morphometrics-features-dir: ./morphometrics/features/interneurons/L1.csv
+    model-config: training/configs/model-xgb.yaml
+    splitter-config: training/configs/splitter-stratified-k-fold.yaml
+  in-L23-morphometrics-xgb-stratified-k-fold:
+    morphometrics-features-dir: ./morphometrics/features/interneurons/L23.csv
+    model-config: training/configs/model-xgb.yaml
+    splitter-config: training/configs/splitter-stratified-k-fold.yaml
+  in-L4-morphometrics-xgb-stratified-k-fold:
+    morphometrics-features-dir: ./morphometrics/features/interneurons/L4.csv
+    model-config: training/configs/model-xgb.yaml
+    splitter-config: training/configs/splitter-stratified-k-fold.yaml
+  in-L5-morphometrics-xgb-stratified-k-fold:
+    morphometrics-features-dir: ./morphometrics/features/interneurons/L5.csv
+    model-config: training/configs/model-xgb.yaml
+    splitter-config: training/configs/splitter-stratified-k-fold.yaml
+  in-L6-morphometrics-xgb-stratified-k-fold:
+    morphometrics-features-dir: ./morphometrics/features/interneurons/L6.csv
+    model-config: training/configs/model-xgb.yaml
+    splitter-config: training/configs/splitter-stratified-k-fold.yaml
+  janelia-L5-morphometrics-xgb-stratified-k-fold:
+    morphometrics-features-dir: ./morphometrics/features/janelia/L5.csv
+    model-config: training/configs/model-xgb.yaml
+    splitter-config: training/configs/splitter-stratified-k-fold.yaml
+  janelia-L6-morphometrics-xgb-stratified-k-fold:
+    morphometrics-features-dir: ./morphometrics/features/janelia/L6.csv
+    model-config: training/configs/model-xgb.yaml
+    splitter-config: training/configs/splitter-stratified-k-fold.yaml
+  pc-L2-morphometrics-xgb-stratified-k-fold:
+    morphometrics-features-dir: ./morphometrics/features/pc/L2.csv
+    model-config: training/configs/model-xgb.yaml
+    splitter-config: training/configs/splitter-stratified-k-fold.yaml
+  pc-L3-morphometrics-xgb-stratified-k-fold:
+    morphometrics-features-dir: ./morphometrics/features/pc/L3.csv
+    model-config: training/configs/model-xgb.yaml
+    splitter-config: training/configs/splitter-stratified-k-fold.yaml
+  pc-L4-morphometrics-xgb-stratified-k-fold:
+    morphometrics-features-dir: ./morphometrics/features/pc/L4.csv
+    model-config: training/configs/model-xgb.yaml
+    splitter-config: training/configs/splitter-stratified-k-fold.yaml
+  pc-L5-morphometrics-xgb-stratified-k-fold:
+    morphometrics-features-dir: ./morphometrics/features/pc/L5.csv
+    model-config: training/configs/model-xgb.yaml
+    splitter-config: training/configs/splitter-stratified-k-fold.yaml
+  pc-L6-morphometrics-xgb-stratified-k-fold:
+    morphometrics-features-dir: ./morphometrics/features/pc/L6.csv
+    model-config: training/configs/model-xgb.yaml
+    splitter-config: training/configs/splitter-stratified-k-fold.yaml
