--- a/dvc/dvc.yaml
+++ b/dvc/dvc.yaml
@@ -2766,9 +2766,9 @@ stages:
         --morphometrics-features ${item.morphometrics-features-dir}
         --model-config ${item.model-config}
         --splitter-config ${item.splitter-config}
-        --checkpoint-dir training/checkpoints-morphometrics/${key}
+        --output-checkpoint-directory training/checkpoints-morphometrics/${key}
       deps:
-        - ${item.features-dir}
+        - ${item.morphometrics-features-dir}
         - ${item.model-config}
         - ${item.splitter-config}
       outs:
