--- a/dvc/dvc.yaml
+++ b/dvc/dvc.yaml
@@ -2756,7 +2756,7 @@ stages:
         --output-features-directory ./morphometrics/features/${item}
       outs:
         - morphometrics/features/${item}
-      desc: ${item}
+      desc: "Extract morphometric features (tabular data) from input neurons."
 
   train-morphometrics:
     foreach: ${training-morphometrics}
@@ -2773,3 +2773,4 @@ stages:
         - ${item.splitter-config}
       outs:
         - training/checkpoints-morphometrics/${key}
+      desc: "Train M-type classifier with morphometric input features (tabular data)"
